# sumer-os

./: .gitignore  ARCHITECTURE_DIAGRAM.txt  COMPLETION_SUMMARY.md  INTEGRATION_README.md  README.md  SYSTEM_ARCHITECTURE_v2_1.md  quick-start.sh
programs/cipher-passwordmanager/: Cargo.toml  build.sh  preview.sh
programs/cipher-passwordmanager/ui/: app.slint
programs/girsu-qrcode/: Cargo.toml  build.sh  preview.sh
programs/girsu-qrcode/src/: main.rs
programs/girsu-qrcode/ui/: app.slint
programs/kispu-painter/: Cargo.toml  build.sh  preview.sh
programs/kispu-painter/src/: main.rs
programs/kispu-painter/ui/: app.slint
programs/orok-browser/: Cargo.toml  build.sh  preview.sh  run.sh
programs/orok-browser/src/: launcher.rs  main.rs  navigation.rs  tabs.rs
programs/orok-browser/target-user/: .rustc_info.json
programs/orok-browser/target-user/debug/.fingerprint/ab_glyph-f334c254e73e77af/: lib-ab_glyph  lib-ab_glyph.json
programs/orok-browser/target-user/debug/.fingerprint/ab_glyph_rasterizer-787995ea59ee6ec7/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
programs/orok-browser/target-user/debug/.fingerprint/accesskit-568fafed5278b9a9/: lib-accesskit  lib-accesskit.json
programs/orok-browser/target-user/debug/.fingerprint/accesskit_atspi_common-9c40cd05dbd991d2/: lib-accesskit_atspi_common  lib-accesskit_atspi_common.json
programs/orok-browser/target-user/debug/.fingerprint/accesskit_consumer-65b36a333b0ebd29/: lib-accesskit_consumer  lib-accesskit_consumer.json
programs/orok-browser/target-user/debug/.fingerprint/accesskit_unix-e06ed42992cd518a/: lib-accesskit_unix  lib-accesskit_unix.json
programs/orok-browser/target-user/debug/.fingerprint/adler2-56b30691f36e23c8/: lib-adler2  (+1 more)
programs/orok-browser/ui/: app.slint
programs/prism-screenshot/: BINARY_LOADER_GUIDE.md  Cargo.toml  PRISM_IPC_EXAMPLE.rs  build.sh  preview.sh
programs/prism-screenshot/src/: binary_loader.rs  clipboard.rs  integration.rs  main.rs
programs/prism-screenshot/ui/: app.slint
(+1689 files in other folders)
