[package]
name = "cipher-passwordmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "=1.5.0", features = ["renderer-femtovg"] }
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "=1.5.0"
