[package]
name = "girsu-qrcode"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "=1.5.0", features = ["renderer-femtovg"] }
qrcode = "0.12"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg"] }
rfd = "0.14"
urlencoding = "2.1.3"


[build-dependencies]
slint-build = "=1.5.0"

