[package]
name = "kispu-painter"
version = "0.1.0"
edition = "2021"
authors = ["Sumer OS Developers"]
description = "A simple pixel art and drawing tool for Sumer OS."

[dependencies]
slint = "1.5.0"
image = { version = "0.24.9", default-features = false, features = ["png", "jpeg", "bmp"] }

[build-dependencies]
slint-build = "1.5.0"