[package]
name = "prism-screenshot"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.5.0"
screenshots = "0.8.10"
image = "0.25.1"
anyhow = "1.0.86"
arboard = "3.4.0"
rdev = "0.5.3"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[build-dependencies]
slint-build = "1.5.0"